--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,13 +15,8 @@
       <h1>tellor data-specs registry</h1>
       
     </header>
-    <div class="box">
-      <p style="text-align: center; font-size: 20px;"> review the living list of tellor query types</p>
+    <div>
 
-     <section>
-
-        <p> cost per year: <span id="costPerYearInTRB"></span> TRB  </p>
-      </section>
 
         <section>
           <section>
@@ -30,6 +25,10 @@
               <button id="turnPage" onclick="window.location.href='Manage.html'" > manage existing queryTypes</button></td>
           </div>
               
+     <section>
+
+      <p> * current cost per year: <span id="costPerYearInTRB"></span> TRB  </p>
+    </section>
           </section>
     </div>
 
