--- a/frontend/Manage.html
+++ b/frontend/Manage.html
@@ -20,7 +20,7 @@
         <button id="connectButton" onclick="App.init()" disabled>Connect Wallet</button>
         <p style="font-size: 20px;">connected address: <span style="font-size: 12px;" id="connectedAddress"></span></p>
         <p style="font-size: 20px;">TRB in wallet: <span style="font-size: 12px;" id="tokenBalance"></span> </p>
-        <p style="font-size: 20px;">Enter the Query Type Name You Wish To Manage Here: <input style="width: 150px;" type="text" id="_queryType" placeholder="queryType name (string)"/></p>
+        <p style="font-size: 20px;"> <input style="width: 150px;" type="text" id="_queryType" placeholder="queryType name (string)"/> <- First enter the Query Type Name You Wish To Manage </p>
         <p><input style="width: 350px;" type="text" id="_owner" placeholder="owner address (set only by owner)"/> <button id="_owner" onclick="App.setOwnerAddress()">Set Owner Address</button></p>
         <p><input style="width: 350px;" type="text" id="_manager" placeholder="manager address (set only by owner)"/> <button id="_manager" onclick="App.setManagerAddress()">Set Mgr Address</button></p>
         <p>Add <input style="width: 50px;"type="text" id="_amountTRB" placeholder=" #"/> TRB to Extend Registration     <button style="margin-left: 20px;" id="_amountTRB" onclick="App.extendRegistration()">Add TRB</button></p>
