--- a/frontend/Register.html
+++ b/frontend/Register.html
@@ -24,6 +24,7 @@
           <!--<p id="stakedTokenBalance"></p>-->
         </p>
         <p><input style="width: 185px;" type="text" id="_queryType" placeholder="_queryType name (string)"/></p>
+        *make sure to reference <a href="https://bafybeigqmwjyiyfdjb7qa5e2i7rzckokbdurxrnrcrhlwcadyxfmmzcalu.ipfs.dweb.link/"> already existing queryTypes </a>first!
         <p><input style="width: 120px;"type="text" id="_amount" placeholder="_amount (uint256)"/> TRB</p>
         <p>(*minimum <span id="costPerYearInTRB"></span> TRB / yr) </p>
 
