--- a/frontend/Register.html
+++ b/frontend/Register.html
@@ -23,8 +23,8 @@
         <p style="font-size: 20px;"> trb in wallet:<span style="font-size: 14px;" id="tokenBalance"></span></p>
           <!--<p id="stakedTokenBalance"></p>-->
         </p>
-        <p><input style="width: 185px;" type="text" id="_queryType" placeholder="_queryType name (string)"/></p>
-        *make sure to reference <a href="https://bafybeigqmwjyiyfdjb7qa5e2i7rzckokbdurxrnrcrhlwcadyxfmmzcalu.ipfs.dweb.link/"> already existing queryTypes </a>first!
+        <p><input style="width: 185px;" type="text" id="_queryType" placeholder="_queryType name (string)"/>*be sure to reference already existing queryTypes <a1  href="https://bafybeigqmwjyiyfdjb7qa5e2i7rzckokbdurxrnrcrhlwcadyxfmmzcalu.ipfs.dweb.link/"> here</a1> & <a1 href="index.html">here</a1> first!</a1> </p>
+      
         <p><input style="width: 120px;"type="text" id="_amount" placeholder="_amount (uint256)"/> TRB</p>
         <p>(*minimum <span id="costPerYearInTRB"></span> TRB / yr) </p>
 
