--- a/frontend/index.html
+++ b/frontend/index.html
@@ -25,6 +25,11 @@
   </div>
 
   <h2>registered queryTypes</h2>
+  <select id="uriDropdown" style="margin-left: 100px; width: 150px; height: 20px"; >
+    <option value="https://api.thegraph.com/subgraphs/name/tellor-io/tellor-data-specs-registry">Polygon Mainnet</option>
+    <option value="https://api.studio.thegraph.com/query/33329/tellor-dataspecs-registry/v0.0.6">Sepolia Testnet</option>
+  </select>
+  <div id="tableContainer"></div>
   <script type="module" src="script.js"></script>
 
   <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script> -->
